--- a/wpm-backend/.env
+++ b/wpm-backend/.env
@@ -4,3 +4,4 @@ MAIL_PASSWORD=nzuo zzgo meoz wznv
 FLASK_ENV=development
 SECRET_KEY = m3HfDL6L_8MLKPnDEkVL95FIcxmrQSyYjoYVa1dwmHI
 JWT_SECRET_KEY =_97gDh8gSTNVjWhzzELGnFVJDEtklCh11KLpeNhQc48
+SERVER_NAME=localhost:5000
